von list auf queue gewechselt fuer traversierung